[package]
name = "essay-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-openai = "0.26.0"
dotenv = "0.15.0"
langchain = "0.2.2"
langchain-rust = "4.6.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
qdrant-client = "1.12.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
shuttle-qdrant = "0.49.0"
tavily = "2.0.3"
thiserror = "2.0.9"
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4"] }
